--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,7 +1,7 @@
 <div class="homeClass">
     <div class="section active" id="section0">
         <div class="container" style="text-align:center;">
-            <h1 class="text-shadow hidden-xs"><a class="green" href="steam://connect/64.79.98.100:7808" target="_blank">64.79.98.100:7807</a></h1>
+            <h1 class="text-shadow hidden-xs"><a class="green h1" href="steam://connect/64.79.98.100:7808" target="_blank">64.79.98.100:7807</a></h1>
             <img src="/assets/logo.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
             <h2 data-stellar-ratio="8" ng-bind="model.serverName"></h2>
             <blink style="position:absolute;bottom:30px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
