--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,10 +26,11 @@
 @import url(https://fonts.googleapis.com/css?family=Orbitron:900);
 @import url(https://fonts.googleapis.com/css?family=Play:400);
 
-body {
+html, body, p, h2, h3 {
     font-family: 'Play', sans-serif !important;
+    font-weight:400;
 }
-h1 {
+h1, .h1 {
     font-family: 'Orbitron', sans-serif !important;
     font-weight: 900;
 }
