--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -2,23 +2,24 @@
     <div class="section active" id="section0">
         <div class="container" style="text-align:center;">
             <h1 class="text-shadow hidden-xs"><a class="green h1" href="steam://connect/64.79.98.100:7808" target="_blank">64.79.98.100:7807</a></h1>
-            <img src="/assets/logo.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
+            <img src="http://i.imgur.com/T71GvLX.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
             <h2 data-stellar-ratio="8" ng-bind="model.serverName"></h2>
-            <blink style="position:absolute;bottom:30px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
+            <blink style="position:absolute;bottom:42px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
             
         </div>
     </div>
     <div class="section" id="section1">
-        <div class="container">
+        <div class="container visible-xs">
             <div class="jumbotron transparent details">
                 <h1>Details</h1>
-                <ul class="visible-xs" style="margin-left:20px;">
+                <ul" style="margin-left:20px;">
                     <li ng-repeat="item in model.someList"><h3>{{item}}</h3></li>
                 </ul>
             </div>
         </div>
         <div class="slide active hidden-xs">
             <div class="container">
+                <h1>Details</h1>
                 <div class="col-xs-12 col-md-6">
                     <h2>
                     Settings:
