New resource map

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -41,7 +41,7 @@
                     <h1 style="margin-top:410px;font-size:3.5em;">Map - The Island</h1>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                    <img src="/assets/map.jpg" class="img-responsive shadow">
+                    <img src="/assets/resource_map.jpg" class="img-responsive shadow">
                 </div>
             </div>
         </div>
