--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -5,65 +5,74 @@
             <img src="http://i.imgur.com/T71GvLX.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
             <h2 data-stellar-ratio="8" ng-bind="model.serverName"></h2>
             <blink style="position:absolute;bottom:42px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
-            
+
         </div>
     </div>
     <div class="section" id="section1">
         <div class="container visible-xs">
             <div class="jumbotron transparent details">
                 <h1>Details</h1>
-                <ul" style="margin-left:20px;">
-                    <li ng-repeat="item in model.someList"><h3>{{item}}</h3></li>
+                <ul " style="margin-left:20px; ">
+                    <li ng-repeat="item in model.someList "><h3>{{item}}</h3></li>
                 </ul>
             </div>
         </div>
-        <div class="slide active hidden-xs">
-            <div class="container">
+        <div class="slide active hidden-xs ">
+            <div class="container ">
                 <h1>Details</h1>
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-6 ">
                     <h2>
                     Settings:
                     <ul>
-                        <li ng-repeat="item in model.someList">{{item}}</li>
+                        <li ng-repeat="item in model.someList ">{{item}}</li>
                     </ul>
                     </h2>
                     <br>
-                    <a class="btn btn-lg btn-default" href="steam://connect/64.79.98.100:7808" target="_blank"><i class="fa fa-2x fa-steam-square"></i><span style="font-size:26px;"> Play Now!</span></a><p>* Steam must be running</p>
+                    <a class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808 " target="_blank
+                "><i class="fa fa-2x fa-steam-square "></i><span style="font-size:26px; "> Play Now!</span></a><p>* Steam must be running</p>
                 </div>
-                <div class="col-md-6">
-                    <img src="/assets/dino.png" class="img-responsive">
+                <div class="col-md-6 ">
+                    <img src="/assets/dino.png " class="img-responsive ">
                 </div>
             </div>
         </div>
-        <div class="slide hidden-xs">
-            <div class="container">
-                <div class="col-xs-12 col-md-6 v-center">
-                    <h1 style="margin-top:410px;font-size:3.5em;">Map - The Island</h1>
+        <div class="slide hidden-xs ">
+            <div class="container ">
+                <div class="col-xs-12 col-md-6 v-center ">
+                    <h1 style="margin-top:410px;font-size:3.5em; ">Map - The Island</h1>
                 </div>
-                <div class="col-xs-12 col-md-6">
-                    <img src="/assets/resource_map.jpg" class="img-responsive shadow">
+                <div class="col-xs-12 col-md-6 ">
+                    <ul>
+                      <li ng-repeat="image in images ">
+                        <a ng-click="openLightboxModal($index) ">
+                           <img ng-src="{{image.thumbUrl}} " class="img-responsive shadow">
+                        </a>
+                      </li>
+                    </ul>
+                    <!-- img src="/assets/resource_map.jpg " class="img-responsive shadow " -->
                 </div>
             </div>
         </div>
     </div>
-    <div class="section" id="section2">
-        <div class="container">
-            <div class="jumbotron transparent">
-            <h1>about the admin <i class="fa fa-terminal"></i></h1>
+    <div class="section " id="section2 ">
+        <div class="container ">
+            <div class="jumbotron transparent ">
+            <h1>about the admin <i class="fa fa-terminal "></i></h1>
             <h3>I like to make things... like this website. <br>
             I also like games... and building stuff.<br>
             Let's build things and play ARK.</h3>
             </div>
         </div>
     </div>
-    <div class="section" id="section3">
-        <div class="container">
-            <div class="jumbotron transparent">
-            <h1>play <i class="fa fa-terminal"></i></h1>
+    <div class="section " id="section3 ">
+        <div class="container ">
+            <div class="jumbotron transparent ">
+            <h1>play <i class="fa fa-terminal "></i></h1>
             <br>
-            <h2 style="font-size:3.5em;margin-top:20px;">While Steam is running...<br>click this button to play.</h2>
+            <h2 style="font-size:3.5em;margin-top:20px; ">While Steam is running...<br>click this button to play.</h2>
             <br>
-            <a class="btn btn-lg btn-default" href="steam://connect/64.79.98.100:7808" target="_blank"><i class="fa fa-4x fa-steam-square"></i><span style="font-size:46px;"> Play Now!</span></a>
+            <a class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808 " target="_blank "><i class="fa
+                fa-4x fa-steam-square "></i><span style="font-size:46px; "> Play Now!</span></a>
             </div>
         </div>
     </div>
