Quick style fixes

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -14,8 +14,11 @@
   .green {
       color:#85b545;
   }
-  #section1, #section3 {
-      background-image:url(/assets/bg2.png);
+  #section1 {
+      background-image:url(/assets/bg2.png) !important;
+  }
+  #section3 {
+      background-image:url(/assets/bg2.png) !important;
   }
   .shadow {
       -webkit-box-shadow: 5px 5px 35px 0px rgba(0,0,0,0.5);
