--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -28,7 +28,7 @@
                     </ul>
                     </h2>
                     <br>
-                    <a class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808 " target="_blank
+                    <a class="btn btn-lg btn-default" href="steam://connect/64.79.98.100:7808 " target="_blank
                 "><i class="fa fa-2x fa-steam-square "></i><span style="font-size:26px; "> Play Now!</span></a><p>* Steam must be running</p>
                 </div>
                 <div class="col-md-6 ">
@@ -36,25 +36,25 @@
                 </div>
             </div>
         </div>
-        <div class="slide hidden-xs ">
+        <div class="slide hidden-xs">
             <div class="container ">
                 <div class="col-xs-12 col-md-6 v-center ">
-                    <h1 style="margin-top:410px;font-size:3.5em; ">Map - The Island</h1>
+                    <h1 style="margin-top:410px;font-size:3.5em; ">Resource Map - The Island</h1>
+                    <p>CLICK ON MAP TO ENLARGE</p>
                 </div>
                 <div class="col-xs-12 col-md-6 ">
                     <ul>
-                      <li ng-repeat="image in images ">
+                      <li ng-repeat="image in images" style="list-style:none;">
                         <a ng-click="openLightboxModal($index) ">
                            <img ng-src="{{image.thumbUrl}} " class="img-responsive shadow">
                         </a>
                       </li>
                     </ul>
-                    <!-- img src="/assets/resource_map.jpg " class="img-responsive shadow " -->
                 </div>
             </div>
         </div>
     </div>
-    <div class="section " id="section2 ">
+    <div class="section " id="section2">
         <div class="container ">
             <div class="jumbotron transparent ">
             <h1>about the admin <i class="fa fa-terminal "></i></h1>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <div class="section " id="section3 ">
+    <div id="section3" class="section ">
         <div class="container ">
             <div class="jumbotron transparent ">
             <h1>play <i class="fa fa-terminal "></i></h1>
