Mobile fixes. Hide Play buttons and show slide nav arrows

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -41,8 +41,8 @@
   
     /* Extra Small Devices, Phones */ 
     @media only screen and (max-width : 480px) {
-      .fp-controlArrow {
-          display:none;
+      .fp-controlArrow.fp-prev, .fp-controlArrow.fp-next {
+              border-width: 12px;
       }
     }
   
