Basic chat via firebase

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -39,6 +39,16 @@
       text-shadow: 5px 5px 35px rgba(0,0,0,0.5);
   }
   
+  .chatArea {
+    overflow: hidden;
+    position: absolute;
+    bottom: -40vh;
+  }
+  .chatText {
+    padding: 10px;
+    background: rgba(0,0,0,0.3);
+  }
+  
     /* Extra Small Devices, Phones */ 
     @media only screen and (max-width : 480px) {
       .fp-controlArrow.fp-prev, .fp-controlArrow.fp-next {
