Getting error on login function

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,7 +2,18 @@
  * These are the variables used throughout the application. This is where
  * overwrites that are not specific to components should be maintained.
  */
-
+.navbar {
+    border-radius:0;
+    border:none;
+    padding:10px 0;
+    margin-bottom:0;
+    background:rgba(0,0,0,0.2);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index:9999;
+}
 
 .transparent {
     background:transparent;
