--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -15,6 +15,14 @@
     z-index:9999;
 }
 
+.navbar-form, .navbar-form p {
+    margin:0;
+    padding:0;
+}
+.navbar-form .btn {
+    margin:0;
+}
+
 .transparent {
     background:transparent;
 }
