--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -7,7 +7,7 @@
     border:none;
     padding:10px 0;
     margin-bottom:0;
-    background:rgba(0,0,0,0.2);
+    background:transparent;
     position: fixed;
     left: 0;
     right: 0;
